# running-analytics-ai

./: .gitignore  CLAUDE.md  Makefile  docker-compose.backend-local.yml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.frontend-main.yml  docker-compose.frontend-worktree.yml  docker-compose.yml  package-lock.json  package.json
.claude/: settings.json
.codex/: hooks.json
api-contract/: openapi.json
apps/backend/: .env.example  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: auth.py
apps/backend/app/core/: config.py  dependencies.py  security.py
apps/backend/app/db/: __init__.py  mongo.py
apps/backend/app/models/: __init__.py  common.py  conversation.py  llm_log.py  user.py
apps/backend/app/services/: strava.py
apps/backend/tests/: test_auth.py  test_backend_infrastructure.py
apps/frontend/: eslint.config.js  index.html  orval.config.ts  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
apps/frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
docs/superpowers/plans/: 2026-05-22-e2e-integration-testing.md  2026-05-23-claude-md-setup.md
docs/superpowers/specs/: 2026-05-22-e2e-integration-testing-design.md  2026-05-22-running-analytics-design.md  2026-05-22-shared-components-design.md  2026-05-23-claude-md-setup-design.md
openspec/changes/add-llm-log-thoughts-tokens/: design.md  proposal.md  tasks.md
openspec/changes/running-analytics-ai-full-system/: design.md  tasks.md  (+1 more)
tests/e2e/: .env.e2e.example  global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+13 files in other folders)
